/*
 * Copyright (c) 2020 gematik GmbH
 * 
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * 
 *    http://www.apache.org/licenses/LICENSE-2.0
 * 
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package de.gematik.ti.healthcardaccess.commands;

import java.util.HashMap;
import java.util.Map;

import de.gematik.ti.healthcardaccess.AbstractHealthCardCommand;
import de.gematik.ti.healthcardaccess.result.Response;
import de.gematik.ti.healthcardaccess.sanitychecker.ISanityChecker;
import de.gematik.ti.healthcardaccess.sanitychecker.ValueStateChecker;

/**
 * Commands representing Get Challenge - gemSpec_COS#14.9.4
 */
public class GetChallengeCommand extends AbstractHealthCardCommand {
    private static final int CLA = 0x00;
    private static final int INS = 0x84;

    private static final int NO_MEANING = 0x00;
    private static final int EXPECTED_LENGTH_08 = 0x08;
    private static final int EXPECTED_LENGTH_16 = 0x10;

    private static final Map<Integer, Response.ResponseStatus> RESPONSE_MESSAGES = new HashMap<>();
    static {
        RESPONSE_MESSAGES.put(0x9000, Response.ResponseStatus.SUCCESS);//NOCS(LAC): Response Code
    }

    /**
     * Get Challenge - gemSpec_COS#14.9.4
     *
     * @param numberOfExpectedOctets
     *              allowed: aes,elc: 0x10; des, rsa: 0x08
     */
    public GetChallengeCommand(final int numberOfExpectedOctets) {
        super(CLA, INS);
        this.p1 = NO_MEANING;
        this.p2 = NO_MEANING;
        // gemSpec_COS#14.9.4.1 + 14.9.4.2
        ISanityChecker<Boolean> checker = ValueStateChecker.getInstance();
        checker.setMsgIncaseError("GetChallengeCommand.errMsg")
                .check(numberOfExpectedOctets == EXPECTED_LENGTH_08 || numberOfExpectedOctets == EXPECTED_LENGTH_16);

        this.ne = numberOfExpectedOctets == EXPECTED_LENGTH_08 ? EXPECTED_LENGTH_08 : EXPECTED_LENGTH_16;
    }

    @Override
    public Map<Integer, Response.ResponseStatus> getStatusResponseMessages() {
        return RESPONSE_MESSAGES;
    }
}
